# FYP-BioDynaMo-GUI-Qt-6.5

./: CMakeLists.txt  LICENSE  README.md  appsettings.h  biodynamodirectory.cpp  biodynamodirectory.h  biodynamoprocess.cpp  biodynamoprocess.h  class-diagram.qmodel  codeeditor.cpp  linenumberarea.h  main.cpp  main.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  simulationparameter.cpp  simulationparameter.h  testbiodynamodirectory.h
